reports/optimization/ressources/StepByStep_Optimization.err.log
Traceback (most recent call last):
  File "/opt/conda/envs/awesome/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/opt/conda/envs/awesome/lib/python3.9/site-packages/nbclient/client.py", line 1265, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/conda/envs/awesome/lib/python3.9/site-packages/jupyter_core/utils/__init__.py", line 166, in wrapped
    return loop.run_until_complete(inner)
  File "/opt/conda/envs/awesome/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/opt/conda/envs/awesome/lib/python3.9/site-packages/nbclient/client.py", line 703, in async_execute
    await self.async_execute_cell(
  File "/opt/conda/envs/awesome/lib/python3.9/site-packages/nbclient/client.py", line 1021, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/opt/conda/envs/awesome/lib/python3.9/site-packages/nbclient/client.py", line 915, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
def cost(p):
    global counterCostCall
    """
    Rosenbrock function.
    https://en.wikipedia.org/wiki/Test_functions_for_optimization    """
   
    x, y = p 
    f = 
    return f/80000.

counterCostCall = 0
Nx, Ny = 100, 100
x = np.linspace(-1.5, 1.5, Nx)
y = np.linspace(-1.5, 1.5, Ny)
X, Y = np.meshgrid(x, y)
zf = np.array([X.flatten(), Y.flatten()])
Z = cost(zf).reshape(Nx, Ny)
Z = np.where(Z > 0.3, np.nan, Z)
mask = np.ones_like(Z)
------------------

[0;36m  Cell [0;32mIn[4], line 8[0;36m[0m
[0;31m    f =[0m
[0m        ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (782123115.py, line 8)

